--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ban Panel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<div class="app">
+  <aside class="sidebar">
+    <h2>🔥 BanPanel</h2>
+    <div id="userDisplay" class="user-info"></div>
+    <nav>
+      <button onclick="navigate('/dashboard')">📊 Dashboard</button>
+      <button onclick="navigate('/login'); logout()">🚪 Logout</button>
+    </nav>
+  </aside>
 
-  <div class="container">
-    <div id="loginForm" class="card fade-in">
+  <main>
+    <!-- Login -->
+    <section id="loginPage" class="card hidden">
       <h2>Login</h2>
-      <input type="text" id="username" placeholder="Username" />
-      <input type="password" id="password" placeholder="Password" />
+      <input id="username" placeholder="Username" />
+      <input id="password" type="password" placeholder="Password" />
       <button id="loginBtn">Login</button>
-    </div>
+    </section>
 
-    <div id="adminPanel" class="card fade-in" style="display: none;">
-      <h2>Ban / Unban Panel</h2>
-      <input type="text" id="targetUser" placeholder="Target Username" />
-      <div class="buttons">
+    <!-- Dashboard -->
+    <section id="dashboardPage" class="hidden">
+      <h2>📊 Dashboard</h2>
+      <input id="targetUser" placeholder="Target Username" />
+      <div class="row">
         <button onclick="banUser()">Ban</button>
         <button onclick="unbanUser()">Unban</button>
-        <button onclick="logout()">Logout</button>
       </div>
-
-      <hr>
-
-      <h3>Currently Banned Users</h3>
-      <ul id="banList"></ul>
-
-      <h3>Action Logs</h3>
-      <table id="logTable">
-        <tr><th>Action</th><th>User</th><th>By</th><th>Time</th></tr>
-      </table>
-    </div>
-  </div>
-
-  <div id="toast"></div>
-  <script src="app.js"></script>
+      <h3>Logs</h3>
+      <table id="logTable"><tr><th>Action</th><th>Target</th><th>By</th><th>Time</th></tr></table>
+    </section>
+  </main>
+</div>
+<div id="toast"></div>
+<script src="app.js"></script>
 </body>
 </html>
